syntax = "proto3";

package server.auth.proto;

option java_multiple_files = true;

service AuthenticationService {

  rpc authenticate(AuthenticationRequest) returns (AuthenticationResponse) {}
}

message AuthenticationRequest {
  string name = 1;
}

message AuthenticationResponse {
  bool is_authorized = 1;
}